
[tool.poetry]
name = "janes-voyages-3b"
version = "0.1.0"
description = ""
authors = ["Josh M. <cyrex562@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
neo4j = "^4.3.1"
py2neo = "^2021.1.3"

[tool.poetry.dev-dependencies]
black = "^21.5b2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
